--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
       'coroutines'           : '1.5.2',
       'compose'              : '1.0.5',
       'accompanist'          : '0.20.2',
-      'navigation'           : '2.4.0-alpha06',
+      'navigation'           : '2.4.0-rc01',
       'appcompat'            : '1.3.1',
       'androidx_core'        : '1.7.0',
       'androidx_activity'    : '1.4.0',
