--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,20 @@ buildscript {
   ext.versions = [
       'compile_sdk'          : 31,
       'min_sdk'              : 24,
-      'android_gradle_plugin': '7.1.0',
-      'kotlin'               : '1.5.31',
-      'coroutines'           : '1.5.2',
-      'compose'              : '1.0.5',
-      'accompanist'          : '0.20.2',
-      'navigation'           : '2.4.0-rc01',
-      'appcompat'            : '1.3.1',
+      'android_gradle_plugin': '7.1.1',
+      'kotlin'               : '1.6.10',
+      'coroutines'           : '1.6.0',
+      'compose'              : '1.1.0',
+      'accompanist'          : '0.23.0',
+      'navigation'           : '2.4.1',
+      'appcompat'            : '1.4.1',
       'androidx_core'        : '1.7.0',
       'androidx_activity'    : '1.4.0',
       'datastore'            : '1.0.0',
-      'lifecycle'            : '2.3.1',
-      'debugdrawer'          : '0.19.0',
+      'lifecycle'            : '2.4.1',
+      'debugdrawer'          : '0.23.0',
       'timber'               : '4.7.1',
-      'leakcanary'           : '2.7',
+      'leakcanary'           : '2.8.1',
       'moshi'                : '1.12.0',
       'okhttp'               : '4.10.0-RC1',
       'retrofit'             : '2.9.0',
@@ -25,7 +25,7 @@ buildscript {
       'turbine'              : '0.7.0',
       'truth'                : '1.1.3',
       'jdk_desugar'          : '1.1.5',
-      'glance'               : '1.0.0-alpha01',
+      'glance'               : '1.0.0-alpha02',
   ]
 
   repositories {
