--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,32 +1,32 @@
 buildscript {
   ext.versions = [
-    'compileSdk': 31,
+    'compileSdk': 32,
     'minSdk': 24,
-    'accompanist': '0.23.0',
-    'androidGradlePlugin': '7.2.0',
+    'accompanist': '0.23.1',
+    'androidGradlePlugin': '7.2.1',
     'androidxActivity': '1.4.0',
-    'androidxCore': '1.7.0',
-    'compose': '1.1.0',
-    'coroutines': '1.6.0',
+    'androidxCore': '1.8.0',
+    'compose': '1.1.1',
+    'coroutines': '1.6.2',
     'datastore': '1.0.0',
     'debugdrawer': '0.23.0',
     'glance': '1.0.0-alpha03',
     'jdkDesugar': '1.1.5',
     'junit': '4.13.2',
     'kotlin': '1.6.10',
-    'leakcanary': '2.8.1',
+    'leakcanary': '2.9.1',
     'lifecycle': '2.4.1',
     'molecule': '0.2.0',
-    'moshi': '1.12.0',
-    'okhttp': '4.10.0-RC1',
-    'osmdroid': '6.1.10',
+    'moshi': '1.13.0',
+    'okhttp': '4.10.0',
+    'osmdroid': '6.1.13',
     'playPublisher': '3.7.0',
     'retrofit': '2.9.0',
     'testParameterInjector': '1.8',
     'timber': '4.7.1',
     'truth': '1.1.3',
-    'turbine': '0.7.0',
-    'voyager': '1.0.0-beta16',
+    'turbine': '0.8.0',
+    'voyager': '1.0.0-rc02',
     'workManager' : '2.7.1',
   ]
   ext.deps = [
