--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,31 +1,31 @@
 buildscript {
   ext.versions = [
-    'compileSdk': 32,
+    'compileSdk': 33,
     'minSdk': 24,
     'accompanist': '0.25.1',
-    'androidGradlePlugin': '7.2.2',
-    'androidxActivity': '1.4.0',
-    'androidxCore': '1.8.0',
-    'compose': '1.2.1',
-    'coroutines': '1.6.2',
+    'androidGradlePlugin': '7.3.1',
+    'androidxActivity': '1.6.1',
+    'androidxCore': '1.9.0',
+    'compose': '1.3.0',
+    'coroutines': '1.6.4',
     'datastore': '1.0.0',
-    'debugdrawer': '0.23.0',
-    'glance': '1.0.0-alpha03',
+    'debugdrawer': '0.26.0',
+    'glance': '1.0.0-alpha05',
     'jdkDesugar': '1.1.5',
     'junit': '4.13.2',
     'kotlin': '1.7.10',
     'leakcanary': '2.9.1',
-    'lifecycle': '2.4.1',
-    'molecule': '0.4.0',
-    'moshi': '1.13.0',
+    'lifecycle': '2.5.1',
+    'molecule': '0.5.0',
+    'moshi': '1.14.0',
     'okhttp': '4.10.0',
     'osmdroid': '6.1.13',
     'playPublisher': '3.7.0',
     'retrofit': '2.9.0',
-    'testParameterInjector': '1.8',
+    'testParameterInjector': '1.9',
     'timber': '4.7.1',
     'truth': '1.1.3',
-    'turbine': '0.9.0',
+    'turbine': '0.10.0', // TODO: Fix tests with turbine > 0.10.0
     'voyager': '1.0.0-rc02',
     'workManager' : '2.7.1',
   ]
