--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -25,7 +25,7 @@ buildscript {
     'testParameterInjector': '1.9',
     'timber': '4.7.1',
     'truth': '1.1.3',
-    'turbine': '0.10.0', // TODO: Fix tests with turbine > 0.10.0
+    'turbine': '0.12.0',
     'voyager': '1.0.0-rc02',
     'workManager' : '2.7.1',
   ]
